--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <header>
             <img class="header-img" src="img/jumbo.jpg">
-        </header>"
+        </header>
 
         <section class="top-content">
             <div class="text-container">
